# cpp-better-main

./: CMakeLists.txt  README.md
example/: main.cpp
include/bmain/: bmain.hpp
src/: better-main.cpp  bmain.cpp
